Update previous episode links to point to new domain

--- a/_episodes/1.md
+++ b/_episodes/1.md
@@ -15,13 +15,13 @@ Welcome to the very first episode of Emacs.el!
 In this episode Daniel talks to Sacha Chua about the Emacs community.
 
 <audio style="width: 100%;" title="Episode 1 - Sacha Chua" controls preload="metadata">
-  <source src="https://cdn.emacs-el.com/episodes/emacs-el-ep1.mp3" type="audio/mp3">
-  <source src="https://cdn.emacs-el.com/episodes/emacs-el-ep1.ogg" type="audio/ogg">
+  <source src="https://cdn.emacsel.com/episodes/emacsel-ep1.mp3" type="audio/mp3">
+  <source src="https://cdn.emacsel.com/episodes/emacsel-ep1.ogg" type="audio/ogg">
 </audio>
 
 - Download:
-  - [MP3](https://cdn.emacs-el.com/episodes/emacs-el-ep1.mp3)
-  - [Ogg](https://cdn.emacs-el.com/episodes/emacs-el-ep1.ogg)
+  - [MP3](https://cdn.emacsel.com/episodes/emacsel-ep1.mp3)
+  - [Ogg](https://cdn.emacsel.com/episodes/emacsel-ep1.ogg)
 - Watch:
   - [YouTube](https://www.youtube.com/watch?v=3-aoH5EuIII)
 
