--- a/_episodes/2.md
+++ b/_episodes/2.md
@@ -15,13 +15,13 @@ In this episode Daniel interviews Samer Masterson, the organizer of EmacsConf
 and the current maintainer of Eshell.
 
 <audio style="width: 100%;" title="Episode 2 - Samer Masterson" controls preload="metadata">
-  <source src="https://cdn.emacs-el.com/episodes/emacs-el-ep2.mp3" type="audio/mp3">
-  <source src="https://cdn.emacs-el.com/episodes/emacs-el-ep2.ogg" type="audio/ogg">
+  <source src="https://cdn.emacsel.com/episodes/emacsel-ep2.mp3" type="audio/mp3">
+  <source src="https://cdn.emacsel.com/episodes/emacsel-ep2.ogg" type="audio/ogg">
 </audio>
 
 - Download:
-  - [MP3](https://cdn.emacs-el.com/episodes/emacs-el-ep2.mp3)
-  - [Ogg](https://cdn.emacs-el.com/episodes/emacs-el-ep2.ogg)
+  - [MP3](https://cdn.emacsel.com/episodes/emacsel-ep2.mp3)
+  - [Ogg](https://cdn.emacsel.com/episodes/emacsel-ep2.ogg)
 - Watch:
   - [YouTube](https://www.youtube.com/watch?v=fKZwFTTyAZY)
 
