--- a/_episodes/3.md
+++ b/_episodes/3.md
@@ -19,13 +19,13 @@ and the people who make it great". They talk about the differences they see
 between Vim and Emacs, and also share some information on their Python workflow.
 
 <audio style="width: 100%;" title="Episode 3 - Tobias Macey and Chris Patti" controls preload="metadata">
-  <source src="https://cdn.emacs-el.com/episodes/emacs-el-ep3.mp3" type="audio/mp3">
-  <source src="https://cdn.emacs-el.com/episodes/emacs-el-ep3.ogg" type="audio/ogg">
+  <source src="https://cdn.emacsel.com/episodes/emacsel-ep3.mp3" type="audio/mp3">
+  <source src="https://cdn.emacsel.com/episodes/emacsel-ep3.ogg" type="audio/ogg">
 </audio>
 
 - Download:
-  - [MP3](https://cdn.emacs-el.com/episodes/emacs-el-ep3.mp3)
-  - [Ogg](https://cdn.emacs-el.com/episodes/emacs-el-ep3.ogg)
+  - [MP3](https://cdn.emacsel.com/episodes/emacsel-ep3.mp3)
+  - [Ogg](https://cdn.emacsel.com/episodes/emacsel-ep3.ogg)
 - Watch:
   - [YouTube](https://www.youtube.com/watch?v=zUn8V641DcM)
 
