--- a/_episodes/4.md
+++ b/_episodes/4.md
@@ -16,13 +16,13 @@ Emacs. John talks about the state of Emacs and his plans, and also answers
 questions asked by the Emacs community.
 
 <audio style="width: 100%;" title="Episode 4 - John Wiegley" controls preload="metadata">
-  <source src="https://cdn.emacs-el.com/episodes/emacs-el-ep4.mp3" type="audio/mp3">
-  <source src="https://cdn.emacs-el.com/episodes/emacs-el-ep4.ogg" type="audio/ogg">
+  <source src="https://cdn.emacsel.com/episodes/emacsel-ep4.mp3" type="audio/mp3">
+  <source src="https://cdn.emacsel.com/episodes/emacsel-ep4.ogg" type="audio/ogg">
 </audio>
 
 - Download:
-  - [MP3](https://cdn.emacs-el.com/episodes/emacs-el-ep4.mp3)
-  - [Ogg](https://cdn.emacs-el.com/episodes/emacs-el-ep4.ogg)
+  - [MP3](https://cdn.emacsel.com/episodes/emacsel-ep4.mp3)
+  - [Ogg](https://cdn.emacsel.com/episodes/emacsel-ep4.ogg)
 - Watch:
   - [YouTube](https://www.youtube.com/watch?v=udNb4E4smbM)
 
