--- a/_episodes/6.md
+++ b/_episodes/6.md
@@ -16,13 +16,13 @@ a company-wide Emacs config and their own package archive! Charles does a lot of
 JavaScript work and has contributed support for ES6 modules syntax to js2-mode.
 
 <audio style="width: 100%;" title="Episode 6 - Charles Lowell" controls preload="metadata">
-  <source src="https://cdn.emacs-el.com/episodes/emacs-el-ep6.mp3" type="audio/mp3">
-  <source src="https://cdn.emacs-el.com/episodes/emacs-el-ep6.ogg" type="audio/ogg">
+  <source src="https://cdn.emacsel.com/episodes/emacsel-ep6.mp3" type="audio/mp3">
+  <source src="https://cdn.emacsel.com/episodes/emacsel-ep6.ogg" type="audio/ogg">
 </audio>
 
 - Download:
-  - [MP3](https://cdn.emacs-el.com/episodes/emacs-el-ep6.mp3)
-  - [Ogg](https://cdn.emacs-el.com/episodes/emacs-el-ep6.ogg)
+  - [MP3](https://cdn.emacsel.com/episodes/emacsel-ep6.mp3)
+  - [Ogg](https://cdn.emacsel.com/episodes/emacsel-ep6.ogg)
 - Watch:
   - [YouTube](https://www.youtube.com/watch?v=GPMLZ9q93k8)
 
