--- a/_episodes/5.md
+++ b/_episodes/5.md
@@ -27,13 +27,13 @@ Daniel interviews Jason Lewis, who works on [Exercism.io](http://exercism.io/)
 and created its Elisp track as well.
 
 <audio style="width: 100%;" title="Episode 5 - Jason Lewis" controls preload="metadata">
-  <source src="https://cdn.emacs-el.com/episodes/emacs-el-ep5.mp3" type="audio/mp3">
-  <source src="https://cdn.emacs-el.com/episodes/emacs-el-ep5.ogg" type="audio/ogg">
+  <source src="https://cdn.emacsel.com/episodes/emacsel-ep5.mp3" type="audio/mp3">
+  <source src="https://cdn.emacsel.com/episodes/emacsel-ep5.ogg" type="audio/ogg">
 </audio>
 
 - Download:
-  - [MP3](https://cdn.emacs-el.com/episodes/emacs-el-ep5.mp3)
-  - [Ogg](https://cdn.emacs-el.com/episodes/emacs-el-ep5.ogg)
+  - [MP3](https://cdn.emacsel.com/episodes/emacsel-ep5.mp3)
+  - [Ogg](https://cdn.emacsel.com/episodes/emacsel-ep5.ogg)
 - Watch:
   - [YouTube](https://www.youtube.com/watch?v=dHdvgNeyBjs)
 
