Use "include player.html" instead of writing html each time
TODO: Do the same for Download and Watch links as well

--- a/_episodes/1.md
+++ b/_episodes/1.md
@@ -14,10 +14,7 @@ Welcome to the very first episode of Emacs.el!
 
 In this episode Daniel talks to Sacha Chua about the Emacs community.
 
-<audio style="width: 100%;" title="Episode 1 - Sacha Chua" controls preload="metadata">
-  <source src="https://cdn.emacsel.com/episodes/emacsel-ep1.mp3" type="audio/mp3">
-  <source src="https://cdn.emacsel.com/episodes/emacsel-ep1.ogg" type="audio/ogg">
-</audio>
+{% include player.html url=page.url title=page.title %}
 
 - Download:
   - [MP3](https://cdn.emacsel.com/episodes/emacsel-ep1.mp3)
