--- a/_episodes/2.md
+++ b/_episodes/2.md
@@ -14,10 +14,7 @@ episode_bytes: {"mp3": 28082176, "ogg": 25212331}
 In this episode Daniel interviews Samer Masterson, the organizer of EmacsConf
 and the current maintainer of Eshell.
 
-<audio style="width: 100%;" title="Episode 2 - Samer Masterson" controls preload="metadata">
-  <source src="https://cdn.emacsel.com/episodes/emacsel-ep2.mp3" type="audio/mp3">
-  <source src="https://cdn.emacsel.com/episodes/emacsel-ep2.ogg" type="audio/ogg">
-</audio>
+{% include player.html url=page.url title=page.title %}
 
 - Download:
   - [MP3](https://cdn.emacsel.com/episodes/emacsel-ep2.mp3)
