--- a/_episodes/4.md
+++ b/_episodes/4.md
@@ -15,10 +15,7 @@ On this episode Daniel interviews John Wiegley, the current maintainer of
 Emacs. John talks about the state of Emacs and his plans, and also answers
 questions asked by the Emacs community.
 
-<audio style="width: 100%;" title="Episode 4 - John Wiegley" controls preload="metadata">
-  <source src="https://cdn.emacsel.com/episodes/emacsel-ep4.mp3" type="audio/mp3">
-  <source src="https://cdn.emacsel.com/episodes/emacsel-ep4.ogg" type="audio/ogg">
-</audio>
+{% include player.html url=page.url title=page.title %}
 
 - Download:
   - [MP3](https://cdn.emacsel.com/episodes/emacsel-ep4.mp3)
