--- a/_episodes/5.md
+++ b/_episodes/5.md
@@ -26,10 +26,7 @@ Jason will be dearly missed.
 Daniel interviews Jason Lewis, who works on [Exercism.io](http://exercism.io/)
 and created its Elisp track as well.
 
-<audio style="width: 100%;" title="Episode 5 - Jason Lewis" controls preload="metadata">
-  <source src="https://cdn.emacsel.com/episodes/emacsel-ep5.mp3" type="audio/mp3">
-  <source src="https://cdn.emacsel.com/episodes/emacsel-ep5.ogg" type="audio/ogg">
-</audio>
+{% include player.html url=page.url title=page.title %}
 
 - Download:
   - [MP3](https://cdn.emacsel.com/episodes/emacsel-ep5.mp3)
