--- a/_episodes/6.md
+++ b/_episodes/6.md
@@ -15,10 +15,7 @@ from [Frontside.io](http://frontside.io/), an Austin-based software studio with
 a company-wide Emacs config and their own package archive! Charles does a lot of
 JavaScript work and has contributed support for ES6 modules syntax to js2-mode.
 
-<audio style="width: 100%;" title="Episode 6 - Charles Lowell" controls preload="metadata">
-  <source src="https://cdn.emacsel.com/episodes/emacsel-ep6.mp3" type="audio/mp3">
-  <source src="https://cdn.emacsel.com/episodes/emacsel-ep6.ogg" type="audio/ogg">
-</audio>
+{% include player.html url=page.url title=page.title %}
 
 - Download:
   - [MP3](https://cdn.emacsel.com/episodes/emacsel-ep6.mp3)
