--- a/_episodes/7.md
+++ b/_episodes/7.md
@@ -15,10 +15,7 @@ On the 7th episode of Emacs.el, Amin joins Daniel as the co-host and they
 interview Jorgen Schäfer, creator of [Elpy][elpy], [Circe][circe], and some
 other awesome packages.
 
-<audio style="width: 100%;" title="Episode 7 - Jorgen Schäfer" controls preload="metadata">
-  <source src="https://cdn.emacsel.com/episodes/emacsel-ep7.mp3" type="audio/mpeg">
-  <source src="https://cdn.emacsel.com/episodes/emacsel-ep7.ogg" type="audio/ogg">
-</audio>
+{% include player.html url=page.url title=page.title %}
 
 - Download:
   - [MP3](https://cdn.emacsel.com/episodes/emacsel-ep7.mp3)
