--- a/_episodes/3.md
+++ b/_episodes/3.md
@@ -18,10 +18,7 @@ In this episode Daniel interviews Tobias Macey and Chris Patti, the hosts of
 and the people who make it great". They talk about the differences they see
 between Vim and Emacs, and also share some information on their Python workflow.
 
-<audio style="width: 100%;" title="Episode 3 - Tobias Macey and Chris Patti" controls preload="metadata">
-  <source src="https://cdn.emacsel.com/episodes/emacsel-ep3.mp3" type="audio/mp3">
-  <source src="https://cdn.emacsel.com/episodes/emacsel-ep3.ogg" type="audio/ogg">
-</audio>
+{% include player.html url=page.url title=page.title %}
 
 - Download:
   - [MP3](https://cdn.emacsel.com/episodes/emacsel-ep3.mp3)
