s/cdn\.emacsel\.com/dl\.emacsel\.com/g
We were using CloudFront & S3 from AWS's free tier for the past year.
Now that that's expired, move the files to my personal server.

--- a/_episodes/1.md
+++ b/_episodes/1.md
@@ -17,8 +17,8 @@ In this episode Daniel talks to Sacha Chua about the Emacs community.
 {% include player.html url=page.url title=page.title %}
 
 - Download:
-  - [MP3](https://cdn.emacsel.com/episodes/emacsel-ep1.mp3)
-  - [Ogg](https://cdn.emacsel.com/episodes/emacsel-ep1.ogg)
+  - [MP3](https://dl.emacsel.com/episodes/emacsel-ep1.mp3)
+  - [Ogg](https://dl.emacsel.com/episodes/emacsel-ep1.ogg)
 - Watch:
   - [YouTube](https://www.youtube.com/watch?v=3-aoH5EuIII)
 
