--- a/_episodes/2.md
+++ b/_episodes/2.md
@@ -17,8 +17,8 @@ and the current maintainer of Eshell.
 {% include player.html url=page.url title=page.title %}
 
 - Download:
-  - [MP3](https://cdn.emacsel.com/episodes/emacsel-ep2.mp3)
-  - [Ogg](https://cdn.emacsel.com/episodes/emacsel-ep2.ogg)
+  - [MP3](https://dl.emacsel.com/episodes/emacsel-ep2.mp3)
+  - [Ogg](https://dl.emacsel.com/episodes/emacsel-ep2.ogg)
 - Watch:
   - [YouTube](https://www.youtube.com/watch?v=fKZwFTTyAZY)
 
