--- a/_episodes/3.md
+++ b/_episodes/3.md
@@ -21,8 +21,8 @@ between Vim and Emacs, and also share some information on their Python workflow.
 {% include player.html url=page.url title=page.title %}
 
 - Download:
-  - [MP3](https://cdn.emacsel.com/episodes/emacsel-ep3.mp3)
-  - [Ogg](https://cdn.emacsel.com/episodes/emacsel-ep3.ogg)
+  - [MP3](https://dl.emacsel.com/episodes/emacsel-ep3.mp3)
+  - [Ogg](https://dl.emacsel.com/episodes/emacsel-ep3.ogg)
 - Watch:
   - [YouTube](https://www.youtube.com/watch?v=zUn8V641DcM)
 
