--- a/_episodes/4.md
+++ b/_episodes/4.md
@@ -18,8 +18,8 @@ questions asked by the Emacs community.
 {% include player.html url=page.url title=page.title %}
 
 - Download:
-  - [MP3](https://cdn.emacsel.com/episodes/emacsel-ep4.mp3)
-  - [Ogg](https://cdn.emacsel.com/episodes/emacsel-ep4.ogg)
+  - [MP3](https://dl.emacsel.com/episodes/emacsel-ep4.mp3)
+  - [Ogg](https://dl.emacsel.com/episodes/emacsel-ep4.ogg)
 - Watch:
   - [YouTube](https://www.youtube.com/watch?v=udNb4E4smbM)
 
