--- a/_episodes/5.md
+++ b/_episodes/5.md
@@ -29,8 +29,8 @@ and created its Elisp track as well.
 {% include player.html url=page.url title=page.title %}
 
 - Download:
-  - [MP3](https://cdn.emacsel.com/episodes/emacsel-ep5.mp3)
-  - [Ogg](https://cdn.emacsel.com/episodes/emacsel-ep5.ogg)
+  - [MP3](https://dl.emacsel.com/episodes/emacsel-ep5.mp3)
+  - [Ogg](https://dl.emacsel.com/episodes/emacsel-ep5.ogg)
 - Watch:
   - [YouTube](https://www.youtube.com/watch?v=dHdvgNeyBjs)
 
