--- a/_episodes/6.md
+++ b/_episodes/6.md
@@ -18,8 +18,8 @@ JavaScript work and has contributed support for ES6 modules syntax to js2-mode.
 {% include player.html url=page.url title=page.title %}
 
 - Download:
-  - [MP3](https://cdn.emacsel.com/episodes/emacsel-ep6.mp3)
-  - [Ogg](https://cdn.emacsel.com/episodes/emacsel-ep6.ogg)
+  - [MP3](https://dl.emacsel.com/episodes/emacsel-ep6.mp3)
+  - [Ogg](https://dl.emacsel.com/episodes/emacsel-ep6.ogg)
 - Watch:
   - [YouTube](https://www.youtube.com/watch?v=GPMLZ9q93k8)
 
