--- a/_episodes/7.md
+++ b/_episodes/7.md
@@ -18,8 +18,8 @@ other awesome packages.
 {% include player.html url=page.url title=page.title %}
 
 - Download:
-  - [MP3](https://cdn.emacsel.com/episodes/emacsel-ep7.mp3)
-  - [Ogg](https://cdn.emacsel.com/episodes/emacsel-ep7.ogg)
+  - [MP3](https://dl.emacsel.com/episodes/emacsel-ep7.mp3)
+  - [Ogg](https://dl.emacsel.com/episodes/emacsel-ep7.ogg)
 - Watch:
   - [YouTube](https://www.youtube.com/watch?v=9-Gmutn6jZY)
 
